--- a/1.0/index.css
+++ b/1.0/index.css
@@ -1,34 +1,63 @@
-* {
+ul {
 	margin: 0;
 	padding: 0;
+}
+ul {
+	list-style: none;
 }
 .timepanel {
 	position: relative;
 	overflow: hidden;
 	width: 300px;
-	height: 400px;
+	border: 1px solid #666;
+	border-radius: 5px;
+	box-shadow: 0 0 5px #666;
+	//height: 400px;
 }
 .timepanel .timeline {
 	float: left;
 	width: 20%;
-	height: 100%;
-	border: 1px solid #666;
+	height: 99%;
+	//border: 1px solid #666;
 	margin-left: 10px;
 }
-.timepanel .timeline ul {
-	list-style: none;
-	margin: 0;
-	padding: 0;
-}
 .timepanel .timecontent {
-	float: left;
+	float: right;
 	width: 70%;
 	background: #eee;
-	height: 100%;
-	border: 1px solid #666;
+	height: 99%;
+	border-left: 1px solid #666;
 }
-.timeline-item {
-	border-top: 1px dashed #ccc;
-	height: 30px;
+.timeline .timeline-item {
+	border-bottom: 1px dashed #ccc;
+	height: 43px;
 	width: 100%;
+	font-size: 15px;
+}
+.timeline .timeline-item.lastone {
+	border: none;
+}
+.timecontent .timecontent-item {
+	border-bottom: 1px dashed #bbb;
+	height: 10px;
+	position: relative;
+	cursor: pointer;
+}
+.timecontent .timecontent-item.lastone {
+	border: none;
+}
+.timecontent .timecontent-item.unactived {
+	cursor: auto;
+}
+
+.timecontent .status {
+	position: absolute;
+	z-index: -1;
+	background: rgb(99,166,245);
+	height: 100%;
+	width: 50%;
+}
+
+.timecontent .timecontent-item.selected {
+	background: rgb(184,221,253);
 }
