--- a/1.0/index.css
+++ b/1.0/index.css
@@ -1,13 +1,12 @@
 ul {
 	margin: 0;
 	padding: 0;
-}
-ul {
 	list-style: none;
 }
 .timepanel {
 	position: relative;
 	overflow: hidden;
+	float: left;
 	width: 300px;
 	border: 1px solid #666;
 	border-radius: 5px;
@@ -21,6 +20,9 @@ ul {
 	//border: 1px solid #666;
 	margin-left: 10px;
 }
+.timepanel .timeline.hide {
+	display: none;
+}
 .timepanel .timecontent {
 	float: right;
 	width: 70%;
@@ -28,11 +30,15 @@ ul {
 	height: 99%;
 	border-left: 1px solid #666;
 }
+.timepanel .timecontent.full-width {
+	width: 100%;
+}
 .timeline .timeline-item {
 	border-bottom: 1px dashed #ccc;
 	height: 43px;
 	width: 100%;
 	font-size: 15px;
+	text-align: center;
 }
 .timeline .timeline-item.lastone {
 	border: none;
@@ -43,12 +49,12 @@ ul {
 	position: relative;
 	cursor: pointer;
 	text-align: center;
-} 
-.timecontent .timecontent-item .time-tip{
-	position: relative;
-	z-index: 1;
-	//color: #fff;
-	font: normal 15px arial
+}
+.timecontent .timecontent-item.selected {
+	background: rgb(184,221,253);
+}
+.timecontent .timecontent-item.disable {
+	background:#eee;
 }
 .timecontent .timecontent-item.lastone {
 	border: none;
@@ -57,6 +63,12 @@ ul {
 	cursor: auto;
 }
 
+.timecontent .timecontent-item .time-tip{
+	position: relative;
+	z-index: 1;
+	//color: #fff;
+	font: normal 15px arial
+}
 .timecontent .status {
 	position: absolute;
 	z-index: -1;
@@ -65,6 +77,3 @@ ul {
 	width: 50%;
 }
 
-.timecontent .timecontent-item.selected {
-	background: rgb(184,221,253);
-}
